fixed background on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,19 @@ h1 {
         padding-bottom: 160px;
     }
 
+    body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Ensure the body takes at least the full height of the viewport */
+    color: #fff; /* Light text */
+    line-height: 1.6;
+    background-image: url('covers/sky.jpg'); /* Set the background image */
+    background-size: cover; /* Ensure the image covers the entire element */
+    background-position: center; /* Position the image in the center */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
+    background-attachment: fixed; /* Keep the background fixed while scrolling */
+    }
+
     /* Center Logo */
     .center-logo {
         width: 200px; /* Adjust size as needed */
